# pearl

./: Taskfile.yml  pyproject.toml
.github/workflows/: integration_tests_ci.yml  miner_docker_release.yml  miner_gpu_ci.yml  pearl-desktop-wallet.yml  rust_ci.yml
docs/: moe-fork-upgrade-guide.md
miner/: conftest.py
miner/miner-base/: pyproject.toml
miner/miner-utils/: pyproject.toml
miner/pearl-gateway/: pyproject.toml
miner/pearl-gemm/: setup.py
miner/pearl-gemm-build-utils/: pyproject.toml
miner/vllm-miner/: Dockerfile  entrypoint.sh  pyproject.toml
miner/vllm-miner/src/vllm_miner/: callbacks.py  config.yaml  mining_state.py  moe_gemm_operators.py  pearl_moe_experts.py  pearl_moe_method.py  vllm_config.py  vllm_kernels.py  vllm_scheme.py
miner/vllm-miner/tests/: moe_testing_helpers.py  reference_outputs.json  test_moe_block_submission.py  test_moe_per_expert.py  test_moe_routing_data.py  test_reference_vs_kernels.py  test_vllm_execution.py  test_vllm_interface.py
node/: Makefile  Taskfile.yml  config.go  log.go  rpcserver.go  rpcserver_test.go  rpcserverhelp.go  rpcwebsocket.go  rpcwebsocket_test.go  sample-pearld.conf  server.go
node/blockchain/: chain.go  chain_test.go  common_test.go  moe_fork_test.go  process_test.go  solve.go  validate.go  validate_test.go
node/btcjson/: chainsvrresults.go
node/btcutil/: block_test.go  certgen.go  certgen_test.go
py-pearl-mining/: Cargo.toml  README.md  pyproject.toml
spv/: blockmanager.go
version/: version.go
wallet/: config.go  log.go  rpcserver.go  sample-oyster.conf
zk-pow/: .gitignore
(+144 files in other folders)
